[package]
name = "sito-file-browser"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Shared library crate: the file-operation cores live here so the GUI app and the `sfb` CLI drive
# identical logic. Both binaries below link this.
[lib]
name = "sito_file_browser_lib"
path = "src/lib.rs"

# The Tauri GUI application (must keep the package name so `tauri build`/bundling finds it).
[[bin]]
name = "sito-file-browser"
path = "src/main.rs"

# Headless, AI-friendly CLI over the same filesystem cores. JSON in/out, `sfb schema` self-describes.
[[bin]]
name = "sfb"
path = "src/bin/sfb.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "protocol-asset"] }
tauri-plugin-window-state = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-dialog = "2"
tauri-plugin-drag = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
window-vibrancy = "0.5"
sysinfo = "0.30.5"
jwalk = "0.8.1"
markdown = "0.3.0"
trash = "5"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp"] }
imageproc = { version = "0.25", default-features = false }
ab_glyph = "0.2"
arboard = "3"

# Finder tags live in a macOS extended attribute (a binary plist) — only needed there.
# objc2 crates drive the custom Dock right-click menu (recent folders + quick actions).
[target.'cfg(target_os = "macos")'.dependencies]
xattr = "1"
plist = "1"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSMenu", "NSMenuItem", "NSResponder", "NSRunningApplication"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
